crates/api/tests/snapshots/snapshots__movies_bad_sort.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "bad_request",
      "message": "unknown sort: bogus"
    }
  },
  "status": 400
}
