crates/api/tests/snapshots/snapshots__movies_collections.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "items": [
      {
        "artwork": {
          "backdrop": {
            "base": "/images/c1-backdrop",
            "widths": [
              480,
              960
            ]
          },
          "poster": {
            "base": "/images/c1-poster",
            "widths": [
              180,
              480,
              960
            ]
          }
        },
        "id": "c1",
        "movies": [
          "m1"
        ],
        "name": "Saga",
        "overview": "epic"
      }
    ],
    "limit": 50,
    "offset": 0,
    "total": 1
  },
  "status": 200
}
