crates/api/tests/snapshots/snapshots__movies_create_collection.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "added_at": "[added_at]",
    "artwork": {},
    "id": "col-1",
    "movies": [
      "m1"
    ],
    "name": "New",
    "overview": null,
    "updated_at": "[updated_at]"
  },
  "status": 201
}
