crates/api/tests/snapshots/snapshots__movies_random.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "version_id": "v4"
  },
  "status": 200
}
