crates/api/tests/snapshots/snapshots__movies_update_collection.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "artwork": {},
    "id": "c1",
    "movies": [],
    "name": "Renamed",
    "overview": "now"
  },
  "status": 200
}
