crates/api/tests/snapshots/snapshots__people_batch.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": [
    {
      "artwork": {},
      "id": "p1",
      "name": "Ada Lovelace"
    }
  ],
  "status": 200
}
