crates/api/tests/snapshots/snapshots__person_detail.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "also_known_as": [],
    "artwork": {},
    "biography": null,
    "birthday": null,
    "deathday": null,
    "filmography": [
      {
        "artwork": {
          "backdrops": [
            {
              "base": "/images/m1-backdrop",
              "widths": [
                480,
                960
              ]
            }
          ],
          "posters": [
            {
              "base": "/images/m1-poster",
              "widths": [
                180,
                480,
                960
              ]
            }
          ]
        },
        "character": "Hero",
        "display_title": "Alpha m1",
        "kind": "movie",
        "role": "actor",
        "title_id": "m1",
        "year": 2020
      },
      {
        "artwork": {
          "backdrops": [
            {
              "base": "/images/s1-backdrop",
              "widths": [
                480,
                960
              ]
            }
          ],
          "posters": [
            {
              "base": "/images/s1-poster",
              "widths": [
                180,
                480,
                960
              ]
            }
          ]
        },
        "character": "Lead",
        "display_title": "Alpha s1",
        "kind": "series",
        "role": "actor",
        "season_count": 1,
        "title_id": "s1",
        "year": 2019
      }
    ],
    "id": "p1",
    "name": "Ada Lovelace",
    "place_of_birth": null
  },
  "status": 200
}
